syntax = "proto3";
package dict_example;

service DictService {
    // shard methods
    rpc Set (SetRequest) returns (SetReply); // update or create
    rpc Delete (Key) returns (Value);

    // mutable methods
    rpc Sqrt (Key) returns (Value);
    rpc Add (AddRequest) returns (Value);

    // readonly methods
    rpc Query (Key) returns (Value);
}

message Key {
    string key = 1;
}
message Value {
    double value = 1;
}

message SetRequest {
    string key = 1;
    double value = 2;
}
message SetReply {
    optional double old_value = 2;
}

message AddRequest {
    string key = 1;
    double value = 2;
}
